# ExcessiveEngine

./: .gitignore  CMakeLists.txt  CMakeLists_old.txt  Excessive-Team.sln  ExcessiveEngine.sln  ExternalLibraries.cmake  README.md
Engine/: CMakeLists.txt
Engine/BaseLibrary/: BaseLibrary.vcxproj  BaseLibrary.vcxproj.filters  CMakeLists.txt  Camera.cpp  Camera.h  Common.cpp  Common.h  ICamera.h  Importer3D.cpp  Importer3D.h  Logging  Transform3D.cpp  Transform3D.h  Triangle.h  Types.h  Utility  VisualCpuProfiler.cpp  VisualCpuProfiler.h  logger.h
Engine/Core/: Actor.cpp  Actor.h  ActorScript.cpp  ActorScript.h  Behavior.h  CMakeLists.txt  CameraComponent.cpp  CameraComponent.h  Common.h  Core.vcxproj  Core.vcxproj.filters  CoreCommon.h  EngineCore.cpp  EngineCore.h  EngineWorld.cpp  EngineWorld.h  Factory.cpp  Factory.h  GameWorld.cpp  GameWorld.h  GraphicsCore.cpp  GraphicsCore.h  InputCore.cpp  InputCore.h  MeshComponent.cpp  MeshComponent.h  NetworkCore.cpp  NetworkCore.h  PhysicsCore.h  RigidBodyComponent.cpp  RigidBodyComponent.h  Script.h  SoftBodyComponent.cpp  SoftBodyComponent.h  SoundCore.h  Transform3DComponent.h  WorldComponent.cpp  WorldComponent.h  WorldObject.h
Engine/Gapi/: CMakeLists.txt  Common.h  IBuffer.h  IGapi.h  IHighLevelGapi.h  ILowLevelGapi.h
Engine/GraphicsApi/: CMakeLists.txt  Common.h  GraphicsApi  IBuffer.h  IGapi.h  IInputLayout.h  IShaderProgram.h  ITextureGapi.h
Engine/GraphicsApi_DX11/: CMakeLists.txt  GapiDX11.cpp  GapiDX11.h
Engine/GraphicsApi_OpenGL/: BufferGL.cpp  BufferGL.h  CMakeLists.txt  GapiGL.cpp  GapiGL.h  GraphicsApi_OpenGL.vcxproj.filters  IndexBufferGL.h  InputLayoutGL.cpp  InputLayoutGL.h  README.txt  ShaderProgramGL.cpp  ShaderProgramGL.h  TextureGL.cpp  TextureGL.h  UniformBufferGL.h  VertexBufferGL.h
Engine/GraphicsEngine/: CMakeLists.txt  Common.h  ICamera.h  IEntity.h  IGraphicsEngine.h  ILight.h  IMaterial.h  IMesh.h  IScene.h  ITexture.h
Engine/GraphicsEngine_RT/: CMakeLists.txt  GraphicsEngineRT.cpp  GraphicsEngineRT.h  GraphicsEngine_RT.vcxproj  README.txt
Engine/GraphicsEngine_Raster/: CMakeLists.txt  Camera.cpp  Camera.h  Entity.cpp  Entity.h  GraphicsEngineRaster.cpp  GraphicsEngineRaster.h  GraphicsEngine_Raster.vcxproj  GraphicsEngine_Raster.vcxproj.filters  Light.cpp  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  PipelineNode.h  PipelineNodeFactory.cpp  PipelinePorts.cpp  PipelinePorts.h  RasterGraphicsEngine.cpp  RasterGraphicsEngine.h  Scene.cpp  Scene.h  Texture.cpp  Texture.h  test.cpp
Engine/GraphicsEngine_RasterZsiros/: CMakeLists.txt  GraphicsEngine_RasterZsiros.vcxproj  GraphicsEngine_RasterZsiros.vcxproj.filters
Engine/GuiEngine/: GuiButton.h  GuiCanvas.h  GuiControl.h  GuiEngine.h  GuiLayer.h  IGuiEngine.h
Engine/NetworkEngine/: CMakeLists.txt
Engine/NetworkEngine_Raknet/: CMakeLists.txt  NetworkEngineRakNet.cpp  NetworkEngineRakNet.h  NetworkEngine_Raknet.vcxproj  NetworkEngine_Raknet.vcxproj.filters
Engine/PhysicsEngine/: Common.h  IPhysicsEngine.h  IRigidBodyEntity.h  ISoftBodyEntity.h  PhysicsCommon.h
Engine/PhysicsEngine_Bullet/: CMakeLists.txt  PhysicsEngineBullet.cpp  PhysicsEngineBullet.h  PhysicsEngineBulletDebugGatherer.h  PhysicsEngine_Bullet.vcxproj  PhysicsEngine_Bullet.vcxproj.filters  RigidBodyEntity.cpp  RigidBodyEntity.h  SoftBodyEntity.cpp  SoftBodyEntity.h
Engine/PlatformLibrary/: CMakeLists.txt  File.h  PlatformLibrary.vcxproj  PlatformLibrary.vcxproj.filters  Sys.h  WindowCommon.h
Engine/SoundEngine/: CMakeLists.txt  IListener.h  ISoundData.h  ISoundEngine.h  README_Interface.txt
Engine/SoundEngine_SFML/: CMakeLists.txt  Emitter.cpp  Emitter.h  Listener.cpp  Listener.h  SFMLCommonSoundData.cpp  SFMLCommonSoundData.h  SFMLCommonSoundEmitter.cpp  SFMLCommonSoundEmitter.h  SFMLMusicData.cpp  SFMLMusicData.h  SFMLMusicWrapper.cpp  SFMLMusicWrapper.h  SFMLSoundData.cpp  SFMLSoundData.h  SFMLSoundWrapper.cpp  SFMLSoundWrapper.h  SoundData.cpp  SoundData.h  SoundEngineSFML.cpp  SoundEngineSFML.h  SoundEngine_SFML.vcxproj  SoundEngine_SFML.vcxproj.filters  SoundScene.cpp  SoundScene.h
Engine/SupportLibrary/: BasicTypes.h  CMakeLists.txt  Camera.cpp  Camera.h  Common.cpp  Common.h  ICamera.h  Importer3D.cpp  Importer3D.h  SupportLibrary.vcxproj  SupportLibrary.vcxproj.filters  Transform3D.cpp  Transform3D.h  Triangle.h  VisualCpuProfiler.cpp  VisualCpuProfiler.h
Excessive-Editor/: CMakeLists.txt  editor.cpp
Excessive-Editor/src/: editor.cpp  main.cpp
Excessive-Engine/: CMakeLists.txt
Excessive-Engine/Common/: CMakeLists.txt  README.txt
Excessive-Engine/CommonLin/: CMakeLists.txt
Excessive-Engine/CommonMac/: CMakeLists.txt
Excessive-Engine/CommonWin/: CMakeLists.txt
Excessive-Engine/Core/: Actor.cpp  Actor.h  ActorBehavior.cpp  ActorBehavior.h  ActorScript.cpp  ActorScript.h  Behavior.cpp  Behavior.h  CMakeLists.txt  CameraComponent.cpp  CameraComponent.h  ComponentCamera.cpp  ComponentCamera.h  ComponentGraphics.cpp  ComponentGraphics.h  ComponentRigidBody.cpp  ComponentRigidBody.h  ComponentSoftBody.cpp  Core.cpp  Core.h  CoreCommon.h  EngineCore.cpp  EngineCore.h  Entity.cpp  Entity.h  EntityScript.cpp  EntityScript.h  Factory.cpp  Factory.h  GraphicsComponent.cpp  GraphicsComponent.h  GraphicsCore.h  Input.cpp  Input.h  InputCore.cpp  PhysicsCore.cpp  PhysicsCore.h  README.txt  RigidBodyComponent.cpp  RigidBodyComponent.h  (+12 more)
Excessive-Engine/Core_Systems/: assert.h  basic_random.h  core_systems.txt  crc32.h  pool_allocator.h  stack_allocator.h  test.cpp
Excessive-Engine/DLLExample/: CMakeLists.txt
Excessive-Engine/DLLUser/: CMakeLists.txt
Excessive-Engine/Deployment/: CMakeLists.txt
Excessive-Engine/GapiGL/: CMakeLists.txt
Excessive-Engine/GraphicsApi/: CMakeLists.txt  IGapi.h  ITextureGapi.h
Excessive-Engine/GraphicsApiGL/: CMakeLists.txt  test.cpp
Excessive-Engine/GraphicsEngine/: CMakeLists.txt  GraphicsEngine  ICamera.h  IEngine.h  IEntity.h  IGraphicsEngine.h  ILight.h  IMaterial.h  IMesh.h  ITexture.h  README_Interface.txt
Excessive-Engine/GraphicsEngineRT/: CMakeLists.txt
Games/: CMakeLists.txt  README.txt
(+1042 files in other folders)
