#-------------------------------------------------------------------------------
# GAMES
#
# This folder contains the games that are developed in parralel with the engine.
#-------------------------------------------------------------------------------

message( "-Games" )

add_subdirectory( Excessive-Strike )
add_subdirectory( Test )