#-------------------------------------------------------------------------------
# GRAPICS API
#
# Wrapper for the graphics api's interface.
#-------------------------------------------------------------------------------

# enumerate interfaces
FILE(GLOB interfaces *.h*)

add_subdirectory( OpenGL )